style(misc): fix height and spacing

--- a/src/components/Footer/components/FinePrint/fine-print.module.less
+++ b/src/components/Footer/components/FinePrint/fine-print.module.less
@@ -3,7 +3,7 @@
   text-align: center;
 
   // @todo - arbitrary value
-  margin-top: 20px;
+  margin: 24px;
 
   p, a {
     // @todo - use global variable
