--- a/src/pages/about-empire.module.less
+++ b/src/pages/about-empire.module.less
@@ -1,4 +1,7 @@
 .container {
+  // @todo: need this for all containers? Only noticable at end of container
+  height: 100%;
+
   // @todo: make app-wide
   .stdContent {
     margin: 36px 10%;
